[tool.poetry]
name = "agents-ai"
version = "0.1.0"
description = ""
authors = ["Neto6391 <joseweedodev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.14"
uvicorn = "^0.34.3"
pydantic-settings = "^2.10.1"
pydantic = "^2.11.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
